<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunkcjaWykladniczaActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/funkcjaWykladnicza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/funkcja_wykladnicza"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/funkcjaWykladniczaWzor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/funkcja_wykladnicza_wzor"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/kolor_wzoru"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/opisFunkcjiWykladniczej"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opis_funkcji_wykldniczej"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="24sp" />

        <Button
            android:id="@+id/przyciskWykres1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickWykladnicza"
            android:text="@string/wykres_funkcji_wykladniczej_wiekszy" />

        <Button
            android:id="@+id/przyciskWykres2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickWykladnicza"
            android:text="@string/wykres_funkcji_wykladniczej_mniejszy" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>