<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunkcjaLogarytmicznaActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/funkcjaLogarytmiczna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp"
            android:text="@string/funkcja_logarytmiczna" />

        <TextView
            android:id="@+id/funkcja_logarytmiczna_wzor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funkcja_logarytmiczna_wzor"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/kolor_wzoru"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/opis_funkcji_logarytmicznej"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp"
            android:text="@string/opis_funkcji_logarytmicznej" />

        <Button
            android:id="@+id/przyciskLogarytmiczy1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="wykresWiekszy"
            android:text="@string/przycisk_logarytmiczny1" />

        <Button
            android:id="@+id/przyciskLogarytmiczy2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="wykresMniejszy"
            android:text="@string/przycisk_logarytmiczny2" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>