<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunkcjaKwadratowaActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/funkcjaKwadratowa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funkcja_kwadratowa"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/funkcjaKwadratowaWzor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funkcja_kwadratowa_wzor"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/kolor_wzoru"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/opisFunkcjiKwadratowej"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opis_funkcji_kwadratowej"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Współczynnik A:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/poleTekstoweAKwadratowe"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Współczynnik B:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/poleTekstoweBKwadratowe"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Współczynnik C:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/poleTekstoweCKwadratowe"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/przyciskObliczWierzchołkiKwadratowe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Oblicz wierzchołki" />

            <Button
                android:id="@+id/przyciskObliczMiejsceZeroweKwadratowe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Oblicz Miejsce zerowe" />


        </LinearLayout>

        <TextView
            android:id="@+id/textWynik2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="Tutaj będzie wynik"
            android:textAlignment="center"
            android:textColor="@color/kolor_wzoru"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>