<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuncjaLiniowaActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/funkcjaLiniowa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funkcja_liniowa"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/funkcjaLiniowaWzor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funkcja_liniowa_wzor"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/kolor_wzoru"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/opisFunkcjiLiniowej"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opis_funkcji_liniowej"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Współczynnik a:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/poleTekstoweA"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Współczynnik b:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/poleTekstoweB"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Miejsce zerowe:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/poleMiejsceZerowe"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/przyciskObliczA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Oblicz A" />

            <Button
                android:id="@+id/przyciskObliczB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Oblicz B" />

            <Button
                android:id="@+id/przyciskObliczMiejsceZerowe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="OBLICZ MZ" />
        </LinearLayout>

        <TextView
            android:id="@+id/textWynik"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="Tutaj będzie wynik"
            android:textAlignment="center"
            android:textColor="@color/kolor_wzoru"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>